# LLMService

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  noxfile.py  pyproject.toml
app/api/: models.py  router.py
app/providers/: base.py  deepseek_provider.py
llm_service/: main.py
llm_service/core/: config.py
llm_service/providers/: local_provider.py  openai_provider.py
tests/: conftest.py  test_api.py  test_providers.py
